[package]
name = "current_macro"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.13", features = ["full"] }
proc-macro2 = { version = "0.3", features = ["nightly"] }
quote = "0.5"

[dev-dependencies]
compiletest_rs = "0.3"
current = { path = "../current" }