[package]
name = "current_macro"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.13", features = ["full"] }
proc-macro2 = { version = "0.3", features = ["nightly"] }
quote = "0.5"

[dev-dependencies]
compiletest_rs = { git = "https://github.com/denzp/compiletest-rs.git", rev = "75e293c" }
current = { path = "../current" }